--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="times">×</string>
     <string name="divided">÷</string>
     <string name="equal">=</string>
-    <string name="result">0.00</string>
+    <string name="result">0..</string>
 </resources>
